[package]
name = "codecrafters-sqlite"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.91"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytemuck = "1.24.0"
byteorder = "1.5.0"
bytes = "1.3.0"                                  # helps manage buffers
itertools = "0.14.0"
thiserror = "1.0.38"                             # error handling
